--- a/client_angular/package.json
+++ b/client_angular/package.json
@@ -24,10 +24,10 @@
     "@angular/platform-browser": "^15.2.0",
     "@angular/platform-browser-dynamic": "^15.2.0",
     "@angular/router": "^15.2.0",
-    "@codingame/monaco-vscode-api": "~4.2.1",
-    "@codingame/monaco-vscode-languages-service-override": "~3.2.2",
-    "@codingame/monaco-vscode-model-service-override": "~3.2.2",
-    "@codingame/monaco-vscode-python-default-extension": "^3.2.2",
+    "@codingame/monaco-vscode-api": "~3.2.3",
+    "@codingame/monaco-vscode-languages-service-override": "~3.2.3",
+    "@codingame/monaco-vscode-model-service-override": "~3.2.3",
+    "@codingame/monaco-vscode-python-default-extension": "~3.2.3",
     "@compodoc/compodoc": "^1.1.19",
     "@tinymce/tinymce-angular": "^7.0.0",
     "@types/markdown-it": "^13.0.6",
@@ -42,9 +42,9 @@
     "markdown-it": "^13.0.2",
     "markdown-it-footnote": "^3.0.3",
     "markdown-it-highlightjs": "^4.0.1",
-    "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~3.2.2",
-    "monaco-editor-wrapper": "^4.0.1",
-    "monaco-languageclient-examples": "^8.1.0",
+    "monaco-editor": "npm:@codingame/monaco-vscode-editor-api@~3.2.3",
+    "monaco-editor-wrapper": "~4.0.2",
+    "monaco-languageclient-examples": "~8.1.1",
     "ngx-extended-pdf-viewer": "^18.0.0-beta.6",
     "ngx-markdown": "^15.1.2",
     "ngx-toastr": "^15.2.2",
@@ -55,7 +55,7 @@
     "sprotty-elk": "^1.0.0",
     "tslib": "^2.3.0",
     "vite": "^5.2.8",
-    "vscode": "npm:@codingame/monaco-vscode-api@~3.2.2",
+    "vscode": "npm:@codingame/monaco-vscode-api@~3.2.3",
     "vscode-languageclient": "~9.0.1",
     "web-worker": "^1.2.0",
     "zone.js": "~0.12.0"
